force-app/main/default/objects/ApprovalRequest__c/ApprovalRequest__c.object-meta.xml
<CustomObject>
    <label>Solicitud de aprobación</label>
    <nameField>
        <displayFormat>AR-{0}</displayFormat>
        <label>Solicitud de aprobación Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitudes de aprobación</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>