force-app/main/default/objects/ApprovalRequest__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo lookup a User que corresponde a OwnerId</description>
    <label>Aprobador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solicitudes_de_aprobaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>