force-app/main/default/objects/ApprovalRequest__c/fields/ApproverCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>ApproverCurrentUser__c</fullName>
    <description>Marca creada para que en la página de inicio sólo se muestren las solicitudes que tengo que aprobar</description>
    <formula>IF( Approver__r.Id = $User.Id, TRUE,FALSE)</formula>
    <label>Soy el aprobador</label>
    <type>Checkbox</type>
</CustomField>