force-app/main/default/objects/ApprovalRequest__c/fields/CheckCredit__c.field-meta.xml
<CustomField>
    <fullName>CheckCredit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisar Crédito</label>
    <type>Checkbox</type>
</CustomField>