force-app/main/default/objects/ApprovalRequest__c/fields/CheckGasPriceRange__c.field-meta.xml
<CustomField>
    <fullName>CheckGasPriceRange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisar Margen de gas</label>
    <type>Checkbox</type>
</CustomField>