force-app/main/default/objects/ApprovalRequest__c/fields/CheckInvestment__c.field-meta.xml
<CustomField>
    <fullName>CheckInvestment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisar Inversión</label>
    <type>Checkbox</type>
</CustomField>