force-app/main/default/objects/ApprovalRequest__c/fields/CheckNonRecoveryInvestment__c.field-meta.xml
<CustomField>
    <fullName>CheckNonRecoveryInvestment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisar Inversión no recuperable</label>
    <type>Checkbox</type>
</CustomField>