force-app/main/default/objects/ApprovalRequest__c/fields/CheckPBA__c.field-meta.xml
<CustomField>
    <fullName>CheckPBA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisar PBA</label>
    <type>Checkbox</type>
</CustomField>