force-app/main/default/objects/ApprovalRequest__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Posición</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>