force-app/main/default/objects/ApprovalRequest__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <description>SBQQ__Quote__c</description>
    <label>Oferta</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Solicitudes de aprobación</relationshipLabel>
    <relationshipName>ApprovalRequests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>