force-app/main/default/objects/ApprovalRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente otros revisores</fullName>
                <default>true</default>
                <label>Pendiente otros revisores</label>
            </value>
            <value>
                <fullName>Desestimado</fullName>
            </value>
            <value>
                <fullName>En revisión</fullName>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>