force-app/main/default/objects/ApprovalRequest__c/fields/TimestampCompleted__c.field-meta.xml
<CustomField>
    <fullName>TimestampCompleted__c</fullName>
    <label>Fecha Completado</label>
    <type>DateTime</type>
</CustomField>