force-app/main/default/objects/ApprovalRequest__c/fields/TimestampReviewing__c.field-meta.xml
<CustomField>
    <fullName>TimestampReviewing__c</fullName>
    <label>Fecha en revisión</label>
    <type>DateTime</type>
</CustomField>