force-app/main/default/objects/ApprovalRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote__c</columns>
    <columns>Approver__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pendiente otros revisores,En revisión</value>
    </filters>
    <label>All</label>
</ListView>